优化以下代码： 1. java8中base64转成输入流，去掉misc引入。
Signed-off-by: 山水夜止 <2270517836@qq.com>